--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
   },
   "scripts": {
     "start": "nodemon dist/index.js",
-    "test": "gulp build && mocha -t 30000 dist/tests/**/*.spec.js"
+    "build": "gulp build",
+    "test": "mocha -t 30000 dist/tests/**/*.spec.js"
   },
   "repository": {
     "type": "git",
