removed gulpfile.js. We will use only npm

--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
   },
   "scripts": {
     "build": "ntsc",
-    "dev": "ntsc --watch & nodemon dist",
+    "run": "ntsc & node dist/index.js",
+    "dev": "ntsc --watch & nodemon dist/index.js",
     "test": "ntsc && mocha dist/**/*.spec.js",
     "lint": "eslint src --ext ts",
     "tsc": "ntsc"
