--- a/package.json
+++ b/package.json
@@ -5,40 +5,42 @@
   "main": "index.js",
   "dependencies": {
     "bcryptjs": "^2.4.3",
-    "body-parser": "^1.17.2",
-    "debug": "^2.6.8",
+    "body-parser": "^1.18.2",
+    "debug": "^2.6.9",
     "dotenv": "^2.0.0",
-    "express": "^4.15.3",
-    "iconv-lite": "^0.4.17",
-    "jsonwebtoken": "^7.4.1",
-    "mongoose": "^4.10.4",
-    "morgan": "^1.8.2",
+    "express": "^4.16.2",
+    "iconv-lite": "^0.4.19",
+    "jsonwebtoken": "^7.4.3",
+    "mongoose": "^4.13.11",
+    "morgan": "^1.9.0",
     "passport": "^0.3.2",
-    "passport-jwt": "^2.2.1",
-    "rxjs": "^5.4.2",
-    "winston": "^2.3.1"
+    "passport-http-bearer": "^1.0.1",
+    "passport-local": "^1.0.0",
+    "rxjs": "^5.5.6",
+    "winston": "^2.4.0"
   },
   "devDependencies": {
-    "@types/chai": "^4.0.0",
+    "@types/chai": "^4.1.2",
     "@types/debug": "0.0.29",
-    "@types/dotenv": "^2.0.20",
-    "@types/express": "^4.0.35",
-    "@types/mocha": "^2.2.41",
-    "@types/mongoose": "^4.7.15",
-    "@types/morgan": "^1.7.32",
-    "@types/node": "^6.0.77",
-    "@types/passport": "^0.3.3",
-    "@types/passport-jwt": "^2.0.20",
-    "chai": "^4.0.2",
+    "@types/dotenv": "^2.0.23",
+    "@types/express": "^4.11.1",
+    "@types/mocha": "^2.2.48",
+    "@types/mongoose": "^4.7.35",
+    "@types/morgan": "^1.7.35",
+    "@types/node": "^6.0.101",
+    "@types/passport": "^0.3.5",
+    "@types/passport-http-bearer": "^1.0.31",
+    "@types/passport-local": "^1.0.32",
+    "chai": "^4.1.2",
     "chai-http": "^3.0.0",
     "gulp": "^3.9.1",
     "gulp-clean": "^0.3.2",
-    "gulp-typescript": "^3.1.7",
+    "gulp-typescript": "^3.2.4",
     "gulp-yaml": "^1.0.1",
-    "mocha": "^3.4.2",
-    "mocha-typescript": "^1.1.4",
+    "mocha": "^3.5.3",
+    "mocha-typescript": "^1.1.12",
     "ntypescript": "1.201706190042.1",
-    "typescript": "^2.3.4"
+    "typescript": "^2.7.2"
   },
   "scripts": {
     "build": "ntsc",
