--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "passport-http-bearer": "^1.0.1",
     "passport-local": "^1.0.0",
     "rxjs": "^5.5.6",
-    "winston": "^2.4.0"
+    "winston": "^2.4.0",
+    "swagger-express": "^1.0.5"
   },
   "devDependencies": {
     "@types/chai": "^4.1.2",
@@ -40,12 +41,19 @@
     "mocha": "^3.5.3",
     "mocha-typescript": "^1.1.12",
     "ntypescript": "1.201706190042.1",
-    "typescript": "^2.7.2"
+    "typescript": "^2.7.2",
+    "webpack": "^4.1.0",
+    "webpack-cli": "^2.0.10",
+    "awesome-typescript-loader": "^3.5.0",
+    "source-map-loader": "^0.2.3",
+    "html-webpack-plugin": "^3.0.4"
   },
   "scripts": {
-    "build": "ntsc",
     "run": "ntsc & node dist/index.js",
     "dev": "ntsc --watch & nodemon dist/index.js",
+    "build-all": "build & build-web",
+    "build-web": "webpack",
+    "build": "ntsc",
     "test": "ntsc && mocha dist/**/*.spec.js",
     "lint": "eslint src --ext ts",
     "tsc": "ntsc"
