--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "passport-local": "^1.0.0",
     "rxjs": "^5.5.6",
     "winston": "^2.4.0",
-    "swagger-express": "^1.0.5"
+    "swagger-express": "^1.0.5",
+    "swagger-ui-express": "^2.0.15",
+    "swagger-jsdoc": "^1.9.7"
   },
   "devDependencies": {
     "@types/chai": "^4.1.2",
