--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "winston": "^2.4.0",
     "swagger-express": "^1.0.5",
     "swagger-ui-express": "^2.0.15",
-    "swagger-jsdoc": "^1.9.7"
+    "swagger-jsdoc": "^1.9.7",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0"
   },
   "devDependencies": {
     "@types/chai": "^4.1.2",
@@ -48,7 +50,9 @@
     "webpack-cli": "^2.0.10",
     "awesome-typescript-loader": "^3.5.0",
     "source-map-loader": "^0.2.3",
-    "html-webpack-plugin": "^3.0.4"
+    "html-webpack-plugin": "^3.0.4",
+    "@types/react": "^16.0.40",
+    "@types/react-dom": "^16.0.4"
   },
   "scripts": {
     "run": "ntsc & node dist/index.js",
