--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,10 +3,12 @@
     "target": "es6",
     "module": "commonjs",
     "experimentalDecorators": true,
-    "outDir": "dist"
+    "outDir": "dist",
+    "jsx": "react"
   },
   "include": [
     "src/**/*.ts",
+    "src/**/*.tsx"
   ],
   "exclude": [
     "node_modules",
