--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "swagger-jsdoc": "^1.9.7",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "pluralize": "^7.0.0"
+    "pluralize": "^7.0.0",
+    "uuid": "^3.2.1"
   },
   "devDependencies": {
     "@types/chai": "^4.1.2",
@@ -60,7 +61,7 @@
     "build-web": "webpack",
     "build": "ntsc",
     "test": "ntsc && mocha dist/**/*.spec.js",
-    "test-one": "ntsc && mocha dist/**/PriceListItem.spec.js",
+    "test-one": "ntsc && mocha dist/**/PriceList.spec.js",
     "lint": "eslint src --ext ts",
     "tsc": "ntsc"
   },
