downgraded webpack 4.1 to 3.11 - text-extract-webapck-plugin was not working and could not find any working alternative

--- a/package.json
+++ b/package.json
@@ -23,16 +23,22 @@
     "swagger-express": "^1.0.5",
     "swagger-ui-express": "^2.0.15",
     "swagger-jsdoc": "^1.9.7",
+    "pluralize": "^7.0.0",
+    "uuid": "^3.2.1",
+    "jquery": "^3.0.0",
+    "popper.js": "^1.12.9",
+    "bootstrap": "^4.0.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "pluralize": "^7.0.0",
-    "uuid": "^3.2.1"
+    "react-transition-group": "2.2.1",
+    "reactstrap": "^4.8.0"
   },
   "devDependencies": {
     "@types/chai": "^4.1.2",
     "@types/debug": "0.0.29",
     "@types/dotenv": "^2.0.23",
     "@types/express": "^4.11.1",
+    "@types/reactstrap": "^5.0.20",
     "@types/mocha": "^2.2.48",
     "@types/mongoose": "^5.0.6",
     "@types/morgan": "^1.7.35",
@@ -46,11 +52,17 @@
     "mocha-typescript": "^1.1.12",
     "ntypescript": "1.201706190042.1",
     "typescript": "^2.7.2",
-    "webpack": "^4.1.0",
-    "webpack-cli": "^2.0.10",
+    "webpack": "^3.11.0",
+    "//":"already was version compatible ^4.1.1 - but due to webpack-contrib not getting things ready like extract-text-webpack-plugin - decided to downgrade for some time",
+    "//":"webpack-cli already was used as webpack 4 above requires webpack-lic ^2.xx",
     "awesome-typescript-loader": "^3.5.0",
     "source-map-loader": "^0.2.3",
     "html-webpack-plugin": "^3.0.4",
+    "style-loader": "^0.20.3",
+    "css-loader": "^0.28.10",
+    "extract-loader": "^1.0.2",
+    "extract-text-webpack-plugin": "3.0.2",
+    "file-loader": "^1.1.11",
     "@types/react": "^16.0.40",
     "@types/react-dom": "^16.0.4"
   },
