--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "bootstrap": "^4.0.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-router-dom": "4.2.2",
     "react-transition-group": "2.2.1",
     "reactstrap": "^4.8.0"
   },
@@ -46,6 +47,9 @@
     "@types/passport": "^0.3.5",
     "@types/passport-http-bearer": "^1.0.31",
     "@types/passport-local": "^1.0.32",
+    "@types/react-router": "^4.0.22",
+    "@types/react-router-dom": "^4.2.4",
+    "react-router-prop-types": "^1.0.0",
     "chai": "^4.1.2",
     "chai-http": "^3.0.0",
     "mocha": "^5.0.4",
@@ -53,8 +57,6 @@
     "ntypescript": "1.201706190042.1",
     "typescript": "^2.7.2",
     "webpack": "^3.11.0",
-    "//":"already was version compatible ^4.1.1 - but due to webpack-contrib not getting things ready like extract-text-webpack-plugin - decided to downgrade for some time",
-    "//":"webpack-cli already was used as webpack 4 above requires webpack-lic ^2.xx",
     "awesome-typescript-loader": "^3.5.0",
     "source-map-loader": "^0.2.3",
     "html-webpack-plugin": "^3.0.4",
