--- a/package.json
+++ b/package.json
@@ -27,12 +27,12 @@
     "uuid": "^3.2.1",
     "jquery": "^3.0.0",
     "popper.js": "^1.12.9",
-    "bootstrap": "^4.0.0",
+    "bootstrap": "^3.3.7",
+    "react-bootstrap": "^0.32.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-router-dom": "4.2.2",
-    "react-transition-group": "2.2.1",
-    "reactstrap": "^4.8.0"
+    "react-transition-group": "2.2.1"
   },
   "devDependencies": {
     "@types/chai": "^4.1.2",
