--- a/package.json
+++ b/package.json
@@ -31,8 +31,8 @@
     "react-bootstrap": "^0.32.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "react-router-dom": "4.2.2",
-    "react-transition-group": "2.2.1"
+    "react-router-dom": "^4.2.2",
+    "react-transition-group": "^2.2.1"
   },
   "devDependencies": {
     "@types/chai": "^4.1.2",
