Added hot reload

--- a/package.json
+++ b/package.json
@@ -57,6 +57,9 @@
     "ntypescript": "1.201706190042.1",
     "typescript": "^2.7.2",
     "webpack": "^3.11.0",
+    "clean-webpack-plugin": "^0.1.17",
+    "webpack-dev-middleware": "^1.12.2",
+    "webpack-hot-middleware": "^2.21.0",
     "awesome-typescript-loader": "^3.5.0",
     "source-map-loader": "^0.2.3",
     "html-webpack-plugin": "^3.0.4",
@@ -69,11 +72,11 @@
     "@types/react-dom": "^16.0.4"
   },
   "scripts": {
-    "start": "ntsc & node dist/index.js",
-    "dev": "ntsc --watch & nodemon dist/index.js",
-    "build-all": "npm run build & npm run build-web",
+    "start": "npm run build-server & node dist/src/index.js",
+    "dev": "ntsc --watch & nodemon dist/src/index.js",
+    "build-all": "npm run build-server & npm run build-web",
     "build-web": "webpack",
-    "build": "ntsc",
+    "build-server": "ntsc --p tsconfig.server.json",
     "test": "ntsc && mocha dist/**/*.spec.js",
     "test-one": "ntsc && mocha dist/**/PriceList.spec.js",
     "lint": "eslint src --ext ts",
