--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,12 +3,12 @@
     "target": "es6",
     "module": "commonjs",
     "experimentalDecorators": true,
-    "outDir": "dist",
+    "outDir": "dist/web",
     "jsx": "react"
   },
   "include": [
-    "src/**/*.ts",
-    "src/**/*.tsx"
+    "src/web/**/*.ts",
+    "src/web/**/*.tsx"
   ],
   "exclude": [
     "node_modules",
