Added FormComponent validations

--- a/package.json
+++ b/package.json
@@ -6,33 +6,34 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.2",
+    "bootstrap": "^3.3.7",
     "debug": "^2.6.9",
     "dotenv": "^2.0.0",
     "express": "^4.16.2",
     "iconv-lite": "^0.4.19",
+    "jquery": "^3.0.0",
     "jsonwebtoken": "^7.4.3",
     "mongoose": "^5.0.9",
     "mongoose-gridfs": "^0.3.2",
-    "stream-buffers": "^3.0.1",
     "morgan": "^1.9.0",
     "passport": "^0.3.2",
     "passport-http-bearer": "^1.0.1",
     "passport-local": "^1.0.0",
-    "rxjs": "^5.5.6",
-    "winston": "^2.4.0",
-    "swagger-express": "^1.0.5",
-    "swagger-ui-express": "^2.0.15",
-    "swagger-jsdoc": "^1.9.7",
     "pluralize": "^7.0.0",
-    "uuid": "^3.2.1",
-    "jquery": "^3.0.0",
     "popper.js": "^1.12.9",
-    "bootstrap": "^3.3.7",
-    "react-bootstrap": "^0.32.1",
     "react": "^16.2.0",
+    "react-bootstrap": "^0.32.1",
     "react-dom": "^16.2.0",
     "react-router-dom": "^4.2.2",
-    "react-transition-group": "^2.2.1"
+    "react-transition-group": "^2.2.1",
+    "reload": "^2.2.2",
+    "rxjs": "^5.5.6",
+    "stream-buffers": "^3.0.1",
+    "swagger-express": "^1.0.5",
+    "swagger-jsdoc": "^1.9.7",
+    "swagger-ui-express": "^2.0.15",
+    "uuid": "^3.2.1",
+    "winston": "^2.4.0"
   },
   "devDependencies": {
     "@types/chai": "^4.1.2",
