--- a/package.json
+++ b/package.json
@@ -24,8 +24,14 @@
     "react": "^16.2.0",
     "react-bootstrap": "^0.32.1",
     "react-dom": "^16.2.0",
+    "react-redux": "^4.4.8",
     "react-router-dom": "^4.2.2",
+    "react-router-redux": "^5.0.0-alpha.6",
     "react-transition-group": "^2.2.1",
+    "redux": "^3.6.0",
+    "redux-devtools-extension": "^2.13.2",
+    "redux-logger": "^3.0.1",
+    "redux-thunk": "^2.2.0",
     "reload": "^2.2.2",
     "rxjs": "^5.5.6",
     "stream-buffers": "^3.0.1",
