--- a/package.json
+++ b/package.json
@@ -46,7 +46,6 @@
     "@types/debug": "0.0.29",
     "@types/dotenv": "^2.0.23",
     "@types/express": "^4.11.1",
-    "@types/reactstrap": "^5.0.20",
     "@types/mocha": "^2.2.48",
     "@types/mongoose": "^5.0.6",
     "@types/morgan": "^1.7.35",
@@ -54,29 +53,31 @@
     "@types/passport": "^0.3.5",
     "@types/passport-http-bearer": "^1.0.31",
     "@types/passport-local": "^1.0.32",
+    "@types/react": "^16.0.40",
+    "@types/react-dom": "^16.0.4",
+    "@types/react-redux": "^5.0.15",
     "@types/react-router": "^4.0.22",
     "@types/react-router-dom": "^4.2.4",
-    "react-router-prop-types": "^1.0.0",
+    "@types/reactstrap": "^5.0.20",
+    "awesome-typescript-loader": "^3.5.0",
     "chai": "^4.1.2",
     "chai-http": "^3.0.0",
-    "mocha": "^5.0.4",
-    "mocha-typescript": "^1.1.12",
-    "ntypescript": "1.201706190042.1",
-    "typescript": "^2.7.2",
-    "webpack": "^3.11.0",
     "clean-webpack-plugin": "^0.1.17",
-    "webpack-dev-middleware": "^1.12.2",
-    "webpack-hot-middleware": "^2.21.0",
-    "awesome-typescript-loader": "^3.5.0",
-    "source-map-loader": "^0.2.3",
-    "html-webpack-plugin": "^3.0.4",
-    "style-loader": "^0.20.3",
     "css-loader": "^0.28.10",
     "extract-loader": "^1.0.2",
     "extract-text-webpack-plugin": "3.0.2",
     "file-loader": "^1.1.11",
-    "@types/react": "^16.0.40",
-    "@types/react-dom": "^16.0.4"
+    "html-webpack-plugin": "^3.0.4",
+    "mocha": "^5.0.4",
+    "mocha-typescript": "^1.1.12",
+    "ntypescript": "1.201706190042.1",
+    "react-router-prop-types": "^1.0.0",
+    "source-map-loader": "^0.2.3",
+    "style-loader": "^0.20.3",
+    "typescript": "^2.7.2",
+    "webpack": "^3.11.0",
+    "webpack-dev-middleware": "^1.12.2",
+    "webpack-hot-middleware": "^2.21.0"
   },
   "scripts": {
     "start": "npm run build-server & node dist/src/index.js",
