--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "debug": "^2.6.9",
     "dotenv": "^2.0.0",
     "express": "^4.16.2",
+    "formik": "^0.11.11",
     "iconv-lite": "^0.4.19",
     "jquery": "^3.0.0",
     "jsonwebtoken": "^7.4.3",
