--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "swagger-jsdoc": "^1.9.7",
     "swagger-ui-express": "^2.0.15",
     "uuid": "^3.2.1",
-    "winston": "^2.4.0"
+    "winston": "^2.4.0",
+    "yup": "^0.24.1"
   },
   "devDependencies": {
     "@types/chai": "^4.1.2",
