--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "@types/react-router": "^4.0.22",
     "@types/react-router-dom": "^4.2.4",
     "@types/reactstrap": "^5.0.20",
+    "@types/redux": "^3.6.0",
     "awesome-typescript-loader": "^3.5.0",
     "chai": "^4.1.2",
     "chai-http": "^3.0.0",
