--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@types/chai": "^4.1.2",
     "@types/debug": "0.0.29",
     "@types/dotenv": "^2.0.23",
+    "@types/es6-promise": "^3.3.0",
     "@types/express": "^4.11.1",
     "@types/mocha": "^2.2.48",
     "@types/mongoose": "^5.0.6",
