--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "jquery": "^3.0.0",
     "jsonwebtoken": "^7.4.3",
     "mongoose": "^5.0.9",
+    "mongoose-autopopulate": "^0.6.1",
     "mongoose-gridfs": "^0.3.2",
     "morgan": "^1.9.0",
     "passport": "^0.3.2",
